# fosspop

./: .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.tests  Makefile  README.md  Todo.yaml
docs/: FossPop.data  FossPop.js  FossPop.wasm  emscripten.css  index.css
include/assets/: audio.hpp  textures.hpp
include/game/: game.hpp  obj.hpp  room.hpp
include/grid/: grid.hpp  grid_obj.hpp  position.hpp  properties.hpp  random.hpp
include/test/: test_room.hpp
lib/game/: game.cpp
public/: index.css  index.html  middleware.js
src/: CMakeLists.txt  main.cpp
src/assets/: CMakeLists.txt  audio.cpp  textures.cpp
src/game/: CMakeLists.txt  game.cpp  obj.cpp  room.cpp
src/grid/: CMakeLists.txt  grid.cpp  grid_obj.cpp  position.cpp  properties.cpp  random.cpp
src/test/: CMakeLists.txt  test_room.cpp
tests/: CMakeLists.txt  My-test.cpp  test_add.cpp  test_sdl2.cpp  test_subtract.cpp
tests/game/: game_update_room_test.cpp
tests/grid/: grid_assert.cpp  grid_assert.hpp  grid_copy_constructor_test.cpp  grid_fill_in_spaces_test.cpp  grid_get_tile_test.cpp  grid_init_array_test.cpp  grid_init_test.cpp  grid_is_combination_anywhere_test.cpp  grid_move_all_tiles_down_test.cpp  grid_pop_all_combinations_and_spend_move_test.cpp  grid_pop_all_combinations_test.cpp  grid_pop_tile_test.cpp  grid_swap_test.cpp  grid_tests.cpp  position_constructor_test.cpp  position_get_neighbours_test.cpp  position_set_test.cpp  properties_test.cpp  random_test.cpp
tests/room/: room_event_test.cpp  room_objs_update_test.cpp  room_update_bg_test.cpp
tests/subdir/: room_event_test.cpp
